fix form styling on ios

--- a/src/scss/partials/_form.scss
+++ b/src/scss/partials/_form.scss
@@ -9,12 +9,15 @@
 
   &__input {
     width: 100%;
-    max-width: 350px;
+    max-width: 280px;
     margin-right: 15px;
     margin-bottom: 20px;
     display: inline-block;
     padding: 4px 8px;
     border: 1px solid #d1d1d1;
+    appearance: none !important;
+    border-radius: 0;
+    box-shadow: none;
   }
 
   &__submit {
@@ -22,8 +25,8 @@
     padding: 4px 8px;
     appearance: none !important;
     background: none;
-    border: 0;
+    border-radius: 0;
     border: 1px solid #d1d1d1;
-    margin-bottom: 20px;    
+    margin-bottom: 20px;
   }
 }
